Chnaged the main color to blue and fixed the profile page in dark mode

--- a/hackathon-practice2.0/src/app/protected/profile/profile.component.css
+++ b/hackathon-practice2.0/src/app/protected/profile/profile.component.css
@@ -1,7 +1,4 @@
 body{
-  /* background-image: url('http://labcenter.com.br/wp-content/uploads/2016/08/gradiente-azul-claro-fundo-1024x768.jpg'); */
-	background-size:100vh;
-	background-color: #f0f8ff;
 	font-family:"Open Sans", sans-serif;
 }
 a.nostyle{
@@ -19,7 +16,7 @@ div.portfoliocard{
 	box-shadow:0px -1px 3px rgba(0,0,0,0.1),
 				0px 2px 6px rgba(0,0,0,0.5);
 	border-radius:6px;
-	margin:10% auto;
+	/* margin:10% auto; */
 	overflow:hidden;
 	z-index:100;
 }
